@@ -1,5 +1,14 @@
 2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	A gnome-system-log.desktop.in.in
+	D gnome-system-log.desktop.in
+
+	* Makefile.am:
+	* gnome-system-log.desktop.in.in: Add Bugzilla version
+	line and generate a template for l10n.
+
+2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* logview.h:
 	* calendar.h:
 	* loglist.h:
